--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,12 @@
       <version>1.2.11</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>org.junit.jupiter</groupId>
+          <artifactId>junit-jupiter-api</artifactId>
+          <version>5.9.0</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 
   <build>
